--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -32,15 +32,35 @@ li {
     margin-right:2.3%;
     margin-top:2.5rem;
     width: 94.1%;
+    height:36.9%;
     background-color: #FFF;
 }
-
+#top-container{
+    margin-left:2rem;
+    margin-right:2rem;
+    margin-bottom: 1.5rem;
+    padding-top:2rem;
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+#pagination-container{
+    color:#00A9D2 ;
+    margin-top:1.5rem;
+    margin-left:2rem;
+    margin-right:2rem;
+    margin-bottom: 2rem;
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-end;
+}
 #bottom-container{
     margin-left:3.6%;
     margin-right:2.3%;
     margin-top:2.5rem;
     padding-top:3.5rem;
-    padding-left:2rem;
     padding-bottom:2.19rem;
     width: 94.1%;
     background-color: #FFF;
@@ -95,14 +115,91 @@ li {
 .card{
     padding-left:1rem;
     padding-top:1.25rem;
+    padding-bottom:1.25rem;
     margin-left:2rem;
     margin-right:1.75rem;
     margin-bottom: 1rem;
-    display: flex;
     background: #FFFFFF;
     color:#666666;
     box-shadow: 0 0 4px 0 rgba(0,0,0,0.20);
     border-radius: 4px;
     width:15rem;
-    height:4.5rem
+}
+.card-group-text{
+    margin-top:0.25rem;
+    color:#89A6EC;
+    font-size:0.75rem;
+}
+.card-price{
+    font-size: 1.5rem;
+    font-family: 'proxima_nova_ltthin';
+
+}
+
+#filter-button{
+    font-size:16px;
+    padding-top:0.75rem;
+    padding-left:1rem;
+    padding-bottom:0.75rem;
+    color: #00A9D2;
+    letter-spacing: 0.5px;
+    width:15rem;
+    background: #FFFFFF;
+    box-shadow: 0 1px 4px 0 rgba(0,0,0,0.30);
+    border-radius: 2px;
+}
+.circle {
+    width: 1.25rem;
+    margin-left:2.75rem;
+    padding-left:0.44rem;
+    padding-right:0.44rem;
+    padding-top:0.19rem;
+    padding-bottom:0.19rem;
+    height: 1.25rem;
+    border-radius: 50%;
+    font-size: 0.75rem;
+    color: #fff;
+    line-height: 1rem;
+    text-align: center;
+    background: #009FCE;
+}
+.ribbon-top {
+    line-height: 2.5rem;
+    margin: 0;
+    background-color: #00B3D6;
+    font-size: 1.13rem;
+    color:#FFF;
+    position: absolute;
+    left: 2.3%;
+    top: 147px;
+    z-index: 2;
+    overflow: hidden;
+    width: 10rem;
+    height: 2.5rem;
+    text-align: center;
+}
+.ribbon-top-shadow {
+    margin: 0;
+    background-color: #000;
+    opacity:0.1;
+    position: absolute;
+    left: 2.6%;
+    top: 155px;
+    z-index: 1;
+    overflow: hidden;
+    width: 10rem;
+    height: 2.3rem;
+    text-align: center;
+}
+
+.triangle-top {
+    position: absolute;
+    left: 2.3%;
+    top: 187px;
+    width: 0;
+    z-index: 1;
+    height: 0;
+    border-top: 1.5rem solid #0A8DAD;
+    border-left: 1.1rem solid transparent;
+
 }
