--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -15,6 +15,13 @@ body {
     font-family: 'proxima_nova_ltsemibold', Georgia, sans-serif;
     background-color: #F9F9F9;
 }
+
+.app-container{
+    max-width: 1280px;
+    margin: 0 auto;
+}
+
+
 li {
   list-style-type: none;
 }
@@ -69,13 +76,6 @@ li {
     flex-wrap: wrap;
 }
 
-.card-container{
-    display:flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    min-height: 15rem;
-}
-
 .build-portfolio{
     width:13.44rem;
     height:3.5rem;
@@ -116,6 +116,25 @@ li {
 .table-striped tr:nth-child(odd){background-color: #FAFAFA }
 
 
+.card-container{
+    display:flex;
+    flex-direction: row;
+    padding-left:2rem;
+    padding-right:2rem;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    min-height: 15rem;
+}
+
+.cardnew{
+    position: relative;
+    width:15rem;
+    height:4.5rem;
+    background: #FFFFFF;
+    box-shadow: 0 0 4px 0 rgba(0,0,0,0.20);
+    border-radius: 4px;
+}
+
 .card{
     padding-left:1rem;
     padding-top:1.25rem;
@@ -123,22 +142,35 @@ li {
     margin-left:2rem;
     margin-right:1.75rem;
     margin-bottom: 1rem;
-    background: #FFFFFF;
-    color:#666666;
-    box-shadow: 0 0 4px 0 rgba(0,0,0,0.20);
-    border-radius: 4px;
-    width:15rem;
-    height:3.5rem;
+
+
 }
+
+.card-text{
+    position:absolute;
+    font-size: 1rem;
+    color: #666666;
+    line-height: 1rem;
+    top:1.25rem;
+    left:1rem;
+}
+
+
 .card-group-text{
-    margin-top:0.25rem;
+    position:absolute;
+    top:2.5rem;
+    left:1rem;
     color:#89A6EC;
     font-size:0.75rem;
 }
-.card-price{
-    font-size: 1.5rem;
-    font-family: 'proxima_nova_ltthin';
 
+.card-price{
+    position:absolute;
+    top:1.25rem;
+    left:9rem;
+    font-family: 'proxima_nova_ltthin';
+    font-size: 1.5rem;
+    line-height: 1.81rem;
 }
 
 #filter-button{
@@ -171,12 +203,13 @@ li {
 .ribbon-top {
     line-height: 2.5rem;
     margin: 0;
+    padding:0;
+    top:-0.5rem;
+    left:-3rem;
     background-color: #00B3D6;
     font-size: 1.13rem;
     color:#FFF;
     position: absolute;
-    left: 2.3%;
-    top: 147px;
     z-index: 2;
     overflow: hidden;
     width: 10rem;
@@ -188,8 +221,8 @@ li {
     background-color: #000;
     opacity:0.1;
     position: absolute;
-    left: 2.6%;
-    top: 155px;
+    left: -2.8rem;
+    top: 0;
     z-index: 1;
     overflow: hidden;
     width: 10rem;
@@ -199,27 +232,15 @@ li {
 
 .triangle-top {
     position: absolute;
-    left: 2.3%;
-    top: 187px;
+    left: -3rem;
+    top: 2rem;
     width: 0;
     z-index: 1;
     height: 0;
     border-top: 1.5rem solid #0A8DAD;
-    border-left: 1.1rem solid transparent;
+    border-left: 1rem solid transparent;
 
 }
-.triangle-bottom {
-    position: absolute;
-    left: 2.3%;
-    top: 640px;
-    width: 0;
-    z-index: 1;
-    height: 0;
-    border-top: 1.5rem solid #16569B;
-    border-left: 1.1rem solid transparent;
-
-}
-
 .small-btn{
     margin:0;
     background-color: #FFF;
