--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -143,7 +143,7 @@ li {
     background: #FFFFFF;
     box-shadow: 0 0 4px 0 rgba(0,0,0,0.20);
     border-radius: 4px;
-    cursor:crosshair;
+    cursor:move;
 }
 
 .card-text{
