--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -21,6 +21,10 @@ body {
     margin: 0 auto;
 }
 
+button{
+    cursor:pointer;
+}
+
 
 li {
   list-style-type: none;
@@ -186,15 +190,7 @@ li {
     box-shadow: 0 1px 4px 0 rgba(0,0,0,0.30);
     border-radius: 2px;
 }
-.small-btn{
-    margin:0;
-    background-color: #FFF;
-    padding-left:3px;
-    padding-right:3px;
-    color:#287DCE ;
-    border-radius: 3px;
-    border: 2px solid #eee;
-}
+
 
 .circle {
     width: 1.25rem;
@@ -248,7 +244,44 @@ li {
 
 }
 
+.inputstocks{
+    width:2.5rem;
+    height:1.5rem;
+    outline: none;
+    font-size:1rem;
+    text-align:center;
+    font-family:'proxima_nova_ltsemibold';
+    padding:0;
+    margin:0;
+    border-top: 1px solid #eee;
+    border-bottom:  1px solid #eee;
 
+    border-left: 0;
+    border-right: 0;
+    box-sizing:border-box;
+}
+
+.small-btn{
+    font-family: 'Proxima Nova Ltone';
+    font-size: 1rem;
+    line-height: 1rem;
+    margin:0;
+    outline: none;
+    background-color: #FFF;
+    padding-top:1px;
+    padding-left:3px;
+    padding-right:3px;
+    color:#287DCE ;
+    border-radius: 4px;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    border: 1px solid #eee;
+    height: 1.5rem;
+    width: 1.25rem;
+    box-sizing:border-box;
+}
 .dragTarget{
     opacity:0.3;
 }
