--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -75,6 +75,7 @@ li {
     padding-top:3.5rem;
     padding-bottom:2rem;
     width: 94.1%;
+
     background-color: #FFF;
     display: -webkit-box;
     display: -moz-box;
@@ -82,6 +83,7 @@ li {
     display: -webkit-flex;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .details-title{
